--- a/index.html
+++ b/index.html
@@ -876,7 +876,7 @@ The title of the table is the name of your system, the three columns contain the
 </div>
 </div>
 <div class="paragraph">
-<p><span class="image"><img src="/docs/images/3_Diagrama_Contexto.png" alt="Context Diagram"></span></p>
+<p><span class="image"><img src="./images/3_Diagrama_Contexto.png" alt="Context Diagram"></span></p>
 </div>
 <table class="tableblock frame-all grid-all stretch">
 <colgroup>
