--- a/index.html
+++ b/index.html
@@ -1839,7 +1839,7 @@ concrete and measurable.</p>
 </div>
 </div>
 <div class="paragraph">
-<p><span class="image"><img src="./images/10_goalsTree.png" alt="Quality Tree"></span></p>
+<p><span class="image"><img src="./images/10-goalsTree.png" alt="Quality Tree"></span></p>
 </div>
 </div>
 <div class="sect2">
