--- a/index.html
+++ b/index.html
@@ -1439,12 +1439,26 @@ Estas dependencias externas provocan que el rendimiento y disponibilidad de nues
 </div>
 <div class="paragraph">
 <div class="title">Mapping of building blocks to infrastructure</div>
-<p>Nuestra infraestructura estará formada por los siguientes elementos:
-* PODs: Almacen individual de información, garantiza la privacidad del usuario.
-* Servidor: Contenedor de nuestra aplicación para despliegue. Todavía sin concretar.
-* WebApp: Front-end de nuestra aplicación.
-* RestApi: Back-end de nuestra aplicación.
-* MongoDB: En este punto, base de datos elegida para la aplicación. Con el uso de MongoDB Atlas para su despliegue.</p>
+<p>Nuestra infraestructura estará formada por los siguientes elementos:</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p>PODs: Almacen individual de información, garantiza la privacidad del usuario.</p>
+</li>
+<li>
+<p>Servidor: Contenedor de nuestra aplicación para despliegue. Todavía sin concretar.</p>
+</li>
+<li>
+<p>WebApp: Front-end de nuestra aplicación.</p>
+</li>
+<li>
+<p>RestApi: Back-end de nuestra aplicación.</p>
+</li>
+<li>
+<p>MongoDB: En este punto, base de datos elegida para la aplicación. Con el uso de MongoDB Atlas para su despliegue.</p>
+</li>
+</ul>
 </div>
 <div style="page-break-after: always;"></div>
 </div>
