--- a/index.html
+++ b/index.html
@@ -504,6 +504,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </ul>
 </li>
 <li><a href="#section-glossary">12. Glossary</a></li>
+<li><a href="#section-appendix-1">13. Interface prototypes</a></li>
 </ul>
 </div>
 </div>
@@ -1988,6 +1989,60 @@ more precisely down to a level of scenarios that can be discussed and evaluated.
 </tbody>
 </table>
 <div style="page-break-after: always;"></div>
+</div>
+</div>
+<div class="sect1">
+<h2 id="section-appendix-1">13. Interface prototypes</h2>
+<div class="sectionbody">
+<div class="sidebarblock arc42help">
+<div class="content">
+<div class="paragraph">
+<div class="title">Contents</div>
+<p>Some interface prototypes for the final application</p>
+</div>
+<div class="paragraph">
+<div class="title">Motivation</div>
+<p>Give a first view of what the application was ment to look like at the begginning of the development</p>
+</div>
+<div class="paragraph">
+<div class="title">Form</div>
+<p>Images with a identifier title</p>
+</div>
+</div>
+</div>
+<div class="paragraph">
+<div class="title">Sing up</div>
+<p><span class="image"><img src="./images/appendix_1_sing_up.png" alt="Sing up window"></span></p>
+</div>
+<div class="paragraph">
+<div class="title">Log in</div>
+<p><span class="image"><img src="./images/appendix_1_log_in.png" alt="Log in window"></span></p>
+</div>
+<div class="paragraph">
+<div class="title">My places</div>
+<p><span class="image"><img src="./images/appendix_1_my_places.png" alt="My places window"></span></p>
+</div>
+<div class="paragraph">
+<div class="title">Place filter</div>
+<p><span class="image"><img src="./images/appendix_1_place_filter.png" alt="Place filter window"></span></p>
+</div>
+<div class="paragraph">
+<div class="title">Friend menu</div>
+<p><span class="image"><img src="./images/appendix_1_friend_menu.png" alt="Friend menu window"></span></p>
+</div>
+<div class="paragraph">
+<div class="title">Friend&#8217;s places</div>
+<p><span class="image"><img src="./images/appendix_1_friends_places.png" alt="Friend&#8217;s places window"></span></p>
+</div>
+<div class="paragraph">
+<div class="title">Friend&#8217;s place filter</div>
+<p><span class="image"><img src="./images/appendix_1_friends_place_filter.png" alt="Friend&#8217;s place filter window"></span></p>
+</div>
+<div class="paragraph">
+<div class="title">Edit profile</div>
+<p><span class="image"><img src="./images/appendix_1_edit_profile.png" alt="Edit profile window"></span></p>
+</div>
+<div style="page-break-after: always;"></div>
 <div class="paragraph">
 <p><strong>About arc42</strong></p>
 </div>
@@ -2012,7 +2067,7 @@ Created by Dr. Peter Hruschka &amp; Dr. Gernot Starke.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2023-02-19 18:51:38 +0100
+Last updated 2023-02-27 17:32:34 +0100
 </div>
 </div>
 </body>
