--- a/webapp/public/index.html
+++ b/webapp/public/index.html
@@ -24,9 +24,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>ASW 2022-2023</title>
+    <title>LoMap es2c</title>
   </head>
-  <body>
+  <body style="overflow-x:hidden; overflow-y:hidden">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
