--- a/webapp/public/index.html
+++ b/webapp/public/index.html
@@ -26,7 +26,7 @@
     -->
     <title>LoMap es2c</title>
   </head>
-  <body style="overflow-x:hidden; overflow-y:hidden">
+  <body style="overflow-x:hidden; overflow-y:auto">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
