--- a/index.html
+++ b/index.html
@@ -1045,7 +1045,7 @@ Refer to details in the following sections.</p>
 <div class="ulist">
 <ul>
 <li>
-<p>MongoDB: Base de datos NoSQL sencilla de gestionar. Y con la capacidad de desplegar en la nube gracias a MongoDB Atlas.</p>
+<p>MongoDB: Base de datos NoSQL sencilla de gestionar. Y con la capacidad de desplegar en la nube gracias a MongoDB Atlas. Usaremos la librería mongoose para facilitar el manejo de la base de datos desde TypeScipt.</p>
 </li>
 <li>
 <p>React: Biblioteca de JavaScript utilizada para crear la interfaz de la aplicación.</p>
@@ -1462,7 +1462,7 @@ Estas dependencias externas provocan que el rendimiento y disponibilidad de nues
 <p>RestApi: Back-end de nuestra aplicación.</p>
 </li>
 <li>
-<p>MongoDB: En este punto, base de datos elegida para la aplicación. Con el uso de MongoDB Atlas para su despliegue.</p>
+<p>MongoDB: En este punto, base de datos elegida para la aplicación. Con el uso de MongoDB Atlas para su despliegue y mongoose para su implementación.</p>
 </li>
 </ul>
 </div>
