--- a/webapp/public/index.html
+++ b/webapp/public/index.html
@@ -25,7 +25,7 @@
     <title>LoMap es2c</title>
 </head>
 
-<body style="overflow-x:hidden; overflow-y:visible">
+<body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
