--- a/index.html
+++ b/index.html
@@ -1686,6 +1686,24 @@ here in this central section or whether you better document it locally
 <td class="tableblock halign-left valign-top"><p class="tableblock">No soporta transacciones complejas.</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><a href="https://github.com/Arquisoft/lomap_es2c/wiki/00.-Decisiones-arquitect%C3%B3nicas#da-02-elecci%C3%B3n-de-la-base-de-datos">DA-02</a></p></td>
 </tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><strong>Leaflet</strong></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Leaflet es una biblioteca de JS open source utilizada para crear mapas interactivos y personalizarlos.</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Presenta limitaciones en funcionalidades avanzadas.</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><a href="https://github.com/Arquisoft/lomap_es2c/wiki/00.-Decisiones-arquitect%C3%B3nicas#da-06-cambio-en-la-elecci%C3%B3n-del-proveedor-de-mapas">DA-06</a></p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><strong>JSON-LD</strong></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Es una forma de representar datos JSON que se integra con otros formatos como RFD y Schema.org</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Su implementación puede requerir un mayor esfuerzo en comparación con otros métodos de marcado.</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><a href="https://github.com/Arquisoft/lomap_es2c/wiki/00.-Decisiones-arquitect%C3%B3nicas#da-09-formato-de-archivos">DA-09</a></p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><strong>Redux</strong></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Esta biblioteca permite centralizar el estado de la aplicación y compartirlo entre los componentes que se suscriban a él de manera sencilla.</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Puede agregar complejidad a la aplicación web.</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><a href="https://github.com/Arquisoft/lomap_es2c/wiki/00.-Decisiones-arquitect%C3%B3nicas#da-08-redux">DA-08</a></p></td>
+</tr>
 </tbody>
 </table>
 <div style="page-break-after: always;"></div>
@@ -2113,7 +2131,7 @@ more precisely down to a level of scenarios that can be discussed and evaluated.
 </thead>
 <tbody>
 <tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock">moongose</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">mongoose</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Librería que facilita la integración de una base de datos MongoDB y Node.js</p></td>
 </tr>
 </tbody>
