--- a/webapp/public/index.html
+++ b/webapp/public/index.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="utf-8" />
     <base href="/" />
-    <link rel="icon" href="%PUBLIC_URL%/logo.jpeg" />
+    <link rel="icon" href="logo.jpeg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Web site created using create-react-app" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="logo.jpeg" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 
     <!--
