--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </head>
 <body class="article toc2 toc-left">
 <div id="header">
-<h1><span class="image"><img src="./images/LogoASW.png" alt="arc42"></span> LOMAP ES2C</h1>
+<h1><span class="image"><img src="./images/LogoCompleto.jpg" alt="arc42"></span> LOMAP ES2C</h1>
 <div id="toc" class="toc2">
 <div id="toctitle">Table of Contents</div>
 <ul class="sectlevel1">
@@ -2201,7 +2201,7 @@ more precisely down to a level of scenarios that can be discussed and evaluated.
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">leaflet</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Librería que adapta el uso de OpenStreetMap facilitando su uso y de licencia gratuita.</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Librería que adapta el uso de OpenStreetMap facilitando su implementación y de licencia gratuita.</p></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">yup</p></td>
@@ -2210,6 +2210,10 @@ more precisely down to a level of scenarios that can be discussed and evaluated.
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">@inrupt/solid-ui-react</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Librería Inrupt utilizada para manejar los PODs.</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">redux</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Librería que facilita el manejo de estado de la aplicación.</p></td>
 </tr>
 </tbody>
 </table>
@@ -2288,7 +2292,7 @@ Created by Dr. Peter Hruschka &amp; Dr. Gernot Starke.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2023-03-03 13:44:19 +0100
+Last updated 2023-05-02 23:28:13 +0200
 </div>
 </div>
 </body>
