--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </head>
 <body class="article toc2 toc-left">
 <div id="header">
-<h1><span class="image"><img src="./images/LogoCompleto.jpg" alt="arc42"></span> LOMAP ES2C</h1>
+<h1><span class="image"><img src="./images/LogoCompleto.png" alt="arc42"></span> LOMAP ES2C</h1>
 <div id="toc" class="toc2">
 <div id="toctitle">Table of Contents</div>
 <ul class="sectlevel1">
@@ -2292,7 +2292,7 @@ Created by Dr. Peter Hruschka &amp; Dr. Gernot Starke.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2023-05-02 23:28:13 +0200
+Last updated 2023-05-02 23:35:44 +0200
 </div>
 </div>
 </body>
